Fix for Safari 5 on Windows and dark mode stuff

--- a/Styles/themes.css
+++ b/Styles/themes.css
@@ -27,8 +27,8 @@
     background-color: white;
 }
 
-.windows-11 .window content {
-
+.windows-11 .window header button {
+    background: transparent;
 }
 
 .windows-11 .window content {
@@ -50,13 +50,7 @@
 
     .windows-11 .window content {
         background-color: rgb(32, 32, 32);
-        border-radius: 8px;
         border: 1px solid rgba(255, 255, 255, 0.267);
-    }
-
-    .windows-11 .window header section {
-        border-radius: 0;
-        background-color: unset;
     }
 
     .windows-11 .window article {
