--- a/Styles/windows.css
+++ b/Styles/windows.css
@@ -276,17 +276,17 @@ article {
     vertical-align: bottom;
 }
 
-.window content, .window {
+/* .window content, .window { */
     /* transition: top 300ms ease-in-out;
     transition: left 300ms ease-in-out;
     transition: right 300ms ease-in-out;
     transition: bottom 300ms ease-in-out; */
-    transition: width 300ms ease-in-out, height 300ms ease-in-out, transform 300ms ease-in-out;
+    /* transition: width 300ms ease-in-out, height 300ms ease-in-out, transform 300ms ease-in-out; */
     /* transition: height 300ms ease-in-out !important;
     transition: transform 300ms ease-in-out !important;
     transition: border-radius 300ms ease-in-out !important; */
     /* transition: all 300ms ease-in-out; */
-}
+/* } */
 
 .window[full] {
     top: 0 !important;
